# NEW-CRM

./: .gitignore  CLAUDE.md  PROJECT_DESCRIPTION_RU.md  README.md  alembic.ini  create-claude-agents.ps1  docker-compose.yml
.claude/: settings.local.json
CRM-Claude-Agents/00_README/: how_to_use.md
CRM-Claude-Agents/01_System/: architect.md
CRM-Claude-Agents/02_Domain/: crm_domain_expert.md
CRM-Claude-Agents/04_Security/: security_permissions.md
CRM-Claude-Agents/05_Code/: implementation_agent.md
CRM-Claude-Agents/06_Specs/: spec_writer.md
archive/: =2.1.0  =2.31.0  old_package-lock.json
backend/: alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
docs/: SMART_DATA_FIXES.md
frontend/: API_FIXES.md  INSTALL.cmd  README.md  START.cmd  index.html  package-lock.json  package.json  playwright.config.ts  run_dev_lan.ps1  vite.config.ts
ocr-lib/: .gitignore  README.md  pyproject.toml
ocr-lib/ocrlib/: __init__.py  extractor.py  models.py  normalizer.py  pipeline.py  preprocessing.py
ocr-lib/ocrlib/providers/: __init__.py  base.py  gemini.py
ocr-spike/: .gitignore  README.md  requirements.txt
scripts/: key  reset_db.py  run_backend.ps1  verify_migrations.py  verify_seed_data.sql
tests/: conftest.py  mass_health_check.py  test_api_ticket.py  test_assets_crud.py  test_attachments_admin.py  test_auth.py  test_clients_crud.py  test_debug_unassigned.py  test_internal_users_api.py  test_output.txt  test_projects.py  test_quick_actions.py  test_reports.py  test_reports_export.py  test_startup.py  test_startup_auth.py  test_tickets_crud.py
(+349 files in other folders)
